Add activate user with token
